# gemma-ollama-workshop-public

./: README.md  pyproject.toml  python-filesystem-mcp.py  workshop-reference.ipynb  workshop-tasks.ipynb
